# IIW2020

./: 02_TCP_apache2_Capture.pcapng  02_TCP_badAlpha_Capture.pcapng  Install_Apache2.md  Install_Apache2.txt  ProjectCompiling.md  README.md  TCP_APACHE_normal.pcapng  TCP_apache2_Capture.pcapng  TCP_badAlpha_NOTok.pcapng
0_EsempiProf/: daytime_clientTCP.c  daytime_serverTCP.c
0_EsempiProf/echo/: basic.h  echo_io.h  echo_server.c  echo_server_sig.c
0_EsempiProf/prefork/: child_pipe.h  lock_fcntl.c  pr_cpu_time.c  prefork_child_flock.c  prefork_child_pipe.c  prefork_io.c  prefork_io.h  prefork_server_pipe.c
0_EsempiProf/select/: basic.h  echo_client_sel.c
1_Progettazione/: iiwPrj.xopp  iiwPrj.xopp~
1_Progettazione/VisualParadigm/: HTTP-ImageServer.vpp  HTTP-ImageServer.vpp.bak_000f  HTTP-ImageServer.vpp.bak_001d  HTTP-ImageServer.vpp.bak_002d  HTTP-ImageServer.vpp.bak_003d  HTTP-ImageServer.vpp.bak_004d  HTTP-ImageServer.vpp.bak_005d  HTTP-ImageServer.vpp.bak_006d  HTTP-ImageServer.vpp.bak_007d  HTTP-ImageServer.vpp.bak_008d  HTTP-ImageServer.vpp.bak_009d  HTTP-ImageServer.vpp.bak_010d  HTTP-ImageServer.vpp.bak_011d  HTTP-ImageServer.vpp.bak_012d  HTTP-ImageServer.vpp.bak_013d  HTTP-ImageServer.vpp.bak_014d  HTTP-ImageServer.vpp.bak_015d  HTTP-ImageServer.vpp.bak_016d  HTTP-ImageServer.vpp.bak_017d  HTTP-ImageServer.vpp.bak_018d  HTTP-ImageServer.vpp.bak_019d  HTTP-ImageServer.vpp.bak_020d  HTTP-ImageServer.vpp.bak_021d  HTTP-ImageServer.vpp.bak_022d  HTTP-ImageServer.vpp.bak_023d  HTTP-ImageServer.vpp.bak_024d  HTTP-ImageServer.vpp.bak_025d  HTTP-ImageServer.vpp.bak_026d  HTTP-ImageServer.vpp.bak_027d  HTTP-ImageServer.vpp.bak_028d  HTTP-ImageServer.vpp.bak_029d  HTTP-ImageServer.vpp.bak_030d  HTTP-ImageServer.vpp.bak_031f  HTTP-ImageServer.vpp.bak_032d  HTTP-ImageServer.vpp.bak_033d  HTTP-ImageServer.vpp.bak_034d  HTTP-ImageServer.vpp.bak_035d  HTTP-ImageServer.vpp.bak_036d  HTTP-ImageServer.vpp.bak_037d  HTTP-ImageServer.vpp.bak_038d  (+28 more)
2_src/: CMakeLists.txt  GLOBAL_DEF.h  HeaderRispostaExample.txt  README.md  main.cpp  repo_Lib_Install.txt  todo.txt
2_src/0_Esempi progetto/: daytime_serverUDP.c  echo.tgz  prefork.tgz  select.tgz
2_src/0_EsempiProf/: count_clientTCP.c  count_serverTCP.c  daytime_clientTCP.c  daytime_serverTCP.c
2_src/0_EsempiProf/echo/: echo_client.c  echo_server.c  echo_server_sig.c
2_src/0_EsempiProf/prefork/: child_pipe.h  client.c  lock_fcntl.c  pr_cpu_time.c  prefork_child_flock.c  prefork_child_nlock.c  prefork_child_pipe.c  prefork_flock.h  prefork_io.c  prefork_io.h  prefork_server_flock.c  prefork_server_nlock.c  prefork_server_pipe.c  web_child.c
2_src/0_EsempiProf/select/: echo_client_sel.c  echo_io.c  echo_io.h  echo_server_sel.c
2_src/ces/: CES.cpp  CES.h  CMakeLists.txt  Worker.cpp  Worker.h
2_src/ces/httpMgt/: CMakeLists.txt  HtmlMessage.cpp  HtmlMessage.h  HttpMgt.cpp  HttpMgt.h  headerForm.h  htmlMessage.cpp  htmlMessage.h  httpMgt.cpp  httpMgt.h
2_src/ces/httpMgt/cacheMgt/: CMakeLists.txt  Resource.cpp  Resource.h  Shredder.cpp  Shredder.h  SyncUtilities.cpp  SyncUtilities.h  cacheSys.cpp  cacheSys.h  resource.cpp  resource.h  syncUtilities.cpp  syncUtilities.h  timeSpecOp.h
2_src/htmlCompose/: CMakeLists.txt  utility.hpp
2_src/httpSystem/: CMakeLists.txt  status_code.cpp  utility.hpp
2_src/logSystem/: CMakeLists.txt  Log.cpp  Log.h
2_src/ncs/: Accept.cpp  Accept.h  CMakeLists.txt  Connection.cpp  Connection.h  NCS.cpp  NCS.h  Queue.cpp  Queue.h  ncsDefine.h  timeSpecOp.h
2_src/simpleWeb/: CMakeLists.txt  Connection.cpp  Connection.h  Utility.hpp  status_code.hpp
2_src/webRsc/: .gitignore  404.html  406.html  index.html  logDb.txt  logErr.txt  logOut.txt
2_src/webRsc/Debug/: 2020-09-21__19:04:45__logDb.txt  2020-09-21__19:09:47__logDb.txt
2_src/webRsc/page/: caffe.html  car.html  computerAi.html  spaceShip.html
2_src/webRsc/web/sys/: 404.html  406.html
2_src/worker/: CMakeLists.txt  Job.cpp  Job.h  asdsadas.cpp  asdsadas.h  worker.cpp  worker.h
3_Relazione/: Relazione_final.docx  apache2_normalCapture.pcapng  badAlpha_normalCapture.pcapng
3_Relazione/Old/: Relazione_ok.docx
4_Bench/: Execute_Test.md  File di testo.txt  Todo Relazione.txt  datPlotter.asv  datPlotter.m  datPlotter_test.m  elencoDat.txt  experiment.py  systemUtility.py  testRunner.py
4_Bench/benchMark/01-Success/: matlabList.txt
4_Bench/benchMark/2020-09-27T13:08:09/: ErrorTestList.txt
4_Bench/benchMark/Success-Bench/: ErrorTestList.txt  faultyTests.txt  matlabListApache.txt  matlabListBadAlpha.txt
4_Bench/benchMark/Success/SemiLogY_Plot/: matlabList.txt
4_Bench/benchMark/benchMarkIMG/: GraphCalc.m  benchMarkTable.m  plotter.m
4_Bench/benchMark/benchMarkIMG_png/: plotter.m
Esempi Prof/: count_serverTCP.c  daytime_serverTCP.c
Esempi Prof/echo/: Makefile  README  echo_client.c  echo_server.c
Esempi Prof/prefork/: Makefile  basic.h  client.c  pr_cpu_time.c  prefork_child_flock.c  prefork_io.c  prefork_server_flock.c  prefork_server_nlock.c  prefork_server_pipe.c
Esempi Prof/select/: Makefile  basic.h  echo_server_sel.c
IIW/: README.md
Web/: .gitignore
Web/page/: car.html  computerAi.html  spaceShip.html
Web/web/sys/: 404.html
Welcome! (Desktop)/: ProjectCompiling.md
WireShark-Capture/: TCP_APACHE_gb.pcapng  TCP_badAlpha_Capture.pcapng  TCP_badAlpha_gb.pcapng
WireShark-Capture/Welcome! (Desktop)/: ProjectCompiling.md
